<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_micro_bridge</name>
  <version>0.4.0</version>
  <description>The bridge between the Arduino and ROS on the NUC using Python</description>

  <maintainer email="casper.cromjongh@hotmail.com">Casper Cromjongh</maintainer>
  <maintainer email="bartboogmans@hotmail.com">Bart Boogmans</maintainer>

  <license>TODO</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-serial</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosgraph</build_export_depend>
  <build_export_depend>python3-numpy</build_export_depend>
  <build_export_depend>python3-serial</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-serial</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
